[package]
name = "bevy-tower-defense-template"
version = "0.1.0"
authors = ["Alice I. Cecile <alice.i.cecile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_ecs_tilemap = "0.4.0"
rand = "0.8.4"